Speed up first switch to ledgerview

Reviewers: #kmymoney, tbaumgart

Reviewed By: tbaumgart

Subscribers: tbaumgart

Tags: #kmymoney

BUG:387072
FIXED-IN:4.8.2
Differential Revision: https://phabricator.kde.org/D8507